--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "chart.js": "^4.5.0",
+        "vue-i18n": "^9.14.5",
         "ziggy-js": "^2.6.0"
     }
 }
