security: Replace hardcoded passwords with environment variables
- Replace hardcoded MySQL passwords with environment variables
- Replace hardcoded MinIO credentials with environment variables
- Add fallback values for development environment
- Update documentation with security note
- Fix GitGuardian security alert

This resolves the GitGuardian secret detection by using environment
variables instead of hardcoded credentials in docker-compose.yml

--- a/.env.docker
+++ b/.env.docker
@@ -64,3 +64,11 @@ MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET=music-tracker-notes
 MINIO_URL=http://localhost:9000
+
+# Docker Environment Variables (can be overridden)
+MYSQL_ROOT_PASSWORD=rootpassword
+MYSQL_DATABASE=music_tracker
+MYSQL_USER=music_tracker
+MYSQL_PASSWORD=music_tracker_password
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin123
