--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,16 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: music_tracker
-      MYSQL_USER: music_tracker
-      MYSQL_PASSWORD: music_tracker_password
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword}
+      MYSQL_DATABASE: ${MYSQL_DATABASE:-music_tracker}
+      MYSQL_USER: ${MYSQL_USER:-music_tracker}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-music_tracker_password}
     volumes:
       - mysql_data:/var/lib/mysql
       - ./docker/mysql/init:/docker-entrypoint-initdb.d
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-prootpassword"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD:-rootpassword}"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -52,8 +52,8 @@ services:
       - "9000:9000"      # API port
       - "9001:9001"      # Console port
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin123
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin123}
     volumes:
       - minio_data:/data
     command: server /data --console-address ":9001"
@@ -74,7 +74,7 @@ services:
         condition: service_healthy
     entrypoint: >
       /bin/sh -c "
-      /usr/bin/mc alias set myminio http://minio:9000 minioadmin minioadmin123;
+      /usr/bin/mc alias set myminio http://minio:9000 ${MINIO_ROOT_USER:-minioadmin} ${MINIO_ROOT_PASSWORD:-minioadmin123};
       /usr/bin/mc mb myminio/music-tracker-notes --ignore-existing;
       /usr/bin/mc policy set public myminio/music-tracker-notes;
       exit 0;
@@ -99,14 +99,14 @@ services:
       - DB_CONNECTION=mysql
       - DB_HOST=mysql
       - DB_PORT=3306
-      - DB_DATABASE=music_tracker
-      - DB_USERNAME=music_tracker
-      - DB_PASSWORD=music_tracker_password
+      - DB_DATABASE=${MYSQL_DATABASE:-music_tracker}
+      - DB_USERNAME=${MYSQL_USER:-music_tracker}
+      - DB_PASSWORD=${MYSQL_PASSWORD:-music_tracker_password}
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - MINIO_ENDPOINT=http://minio:9000
-      - MINIO_ACCESS_KEY=minioadmin
-      - MINIO_SECRET_KEY=minioadmin123
+      - MINIO_ACCESS_KEY=${MINIO_ROOT_USER:-minioadmin}
+      - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD:-minioadmin123}
       - MINIO_BUCKET=music-tracker-notes
       - MINIO_URL=http://localhost:9000
     depends_on:
