Исправление функциональности таймера и настройка файлового хранилища
Основные изменения:

🔧 Исправление кнопок добавления минут к таймеру:
- Исправлена валидация в SessionController для поля planned_duration
- Улучшена логика обновления времени в активных блоках
- Добавлены уведомления о продлении времени
- Кнопки теперь работают только для активных сессий

☁️ Настройка MinIO файлового хранилища:
- Исправлена конфигурация URL для временных ссылок на файлы
- Настроен правильный endpoint для генерации подписей
- Обновлены переменные окружения для Docker
- Исправлена проблема с просмотром нот в браузере

📁 Улучшение конфигурации окружения:
- Переход на использование .env.docker для Docker контейнеров
- Упрощена конфигурация docker-compose.yml
- Добавлены недостающие переменные окружения

🎨 Добавление favicon:
- Создана SVG иконка с музыкальной тематикой
- Добавлены ссылки на favicon в HTML шаблон
- Поддержка различных форматов иконок

🔧 Технические улучшения:
- Обновлена конфигурация файловой системы
- Исправлена логика временных URL для MinIO
- Улучшена обработка ошибок при работе с файлами

Все функции таймера и файлового хранилища теперь работают корректно.

--- a/.env.docker
+++ b/.env.docker
@@ -63,7 +63,9 @@ MINIO_ENDPOINT=http://minio:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET=music-tracker-notes
-MINIO_URL=http://localhost:9000
+MINIO_URL=http://localhost:19000
+MINIO_API_PORT=19000
+MINIO_CONSOLE_PORT=19001
 
 # Docker Environment Variables (can be overridden)
 MYSQL_ROOT_PASSWORD=rootpassword
@@ -72,3 +74,7 @@ MYSQL_USER=music_tracker
 MYSQL_PASSWORD=music_tracker_password
 MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin123
+
+# Web Server Configuration
+NGINX_HTTP_PORT=18080
+NGINX_HTTPS_PORT=18443
