--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,7 @@ services:
             MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
             MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin123}
             MINIO_SERVER_URL: http://localhost:19000
+            MINIO_BROWSER_REDIRECT_URL: http://localhost:19000
         volumes:
             - minio_data:/data
         command: server /data --console-address ":9001"
