--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.4.31",
+        "sharp": "^0.34.4",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.6.3",
         "vite": "^7.0.4",
+        "vite-plugin-pwa": "^1.1.0",
         "vue": "^3.4.0",
-        "vue-tsc": "^2.0.24"
+        "vue-tsc": "^2.0.24",
+        "workbox-window": "^7.3.0"
     },
     "dependencies": {
         "chart.js": "^4.5.0",
