fix: исправлена логика автопереключения блоков в сессиях
Исправлены критические ошибки в автоматическом переключении между блоками упражнений при использовании Pomodoro-режима и режима auto_advance:

## Проблемы
- После завершения блока вызывался resetTimer(), который останавливал таймер следующего блока
- Race condition из-за setTimeout(100ms) в watch(currentBlock)
- Некорректное воспроизведение звуков при автопереключении

## Изменения
- Создан stopTimerInternal() для внутренней остановки таймера без звуков
- Убран вызов resetTimer() из completeBlock onSuccess callback
- Удалена задержка в watch(currentBlock), таймер запускается сразу
- Улучшена логика обработки изменений currentBlock с тремя сценариями:
  * Автопереход к следующему блоку
  * Появление нового активного блока после пересоздания компонента
  * Исчезновение активного блока (завершение последнего)

## Результат
Теперь при завершении блока:
1. Блок завершается на backend
2. Backend автоматически активирует следующий блок
3. watch(currentBlock) обнаруживает изменение
4. Сбрасывается старый таймер без звуков
5. Немедленно запускается таймер для нового блока

--- a/.env.docker
+++ b/.env.docker
@@ -1,6 +1,6 @@
 APP_NAME="Music Practice Tracker"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:4ChLZ58MIigkQcp1O7HgnLLrKj7gUpGc2eB6bqdZvJQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
