--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "chart.js": "^4.5.0",
+        "vite-plugin-pwa": "^1.1.0",
         "vue-i18n": "^9.14.5",
         "vuedraggable": "^4.1.0",
         "ziggy-js": "^2.6.0"
